#757 - Tag - New size and spacing fixes (#803)
* new tag size

* spacing changes

* fixes for spacings

* spacing fix

* remove leftover

--- a/packages/react-components/src/components/Tag/Tag.module.scss
+++ b/packages/react-components/src/components/Tag/Tag.module.scss
@@ -78,18 +78,23 @@
   }
 
   &--small {
-    padding: 1px 4px;
+    padding: 1px var(--spacing-1);
     height: 20px;
   }
 
   &--medium {
-    padding: 1px 8px;
+    padding: 1px var(--spacing-1);
     height: 24px;
   }
 
   &--large {
-    padding: 5px 12px;
+    padding: 5px var(--spacing-2);
     height: 32px;
+  }
+
+  &--xlarge {
+    padding: 5px var(--spacing-3);
+    height: 36px;
   }
 
   &--outline {
@@ -97,12 +102,20 @@
     border-style: solid;
     background-color: transparent;
 
+    &.tag--small {
+      padding: 0 calc(var(--spacing-1) - 1px);
+    }
+
     &.tag--medium {
-      padding: 0 7px;
+      padding: 0 calc(var(--spacing-1) - 1px);
     }
 
     &.tag--large {
-      padding: 4px 11px;
+      padding: 4px calc(var(--spacing-2) - 1px);
+    }
+
+    &.tag--xlarge {
+      padding: 4px calc(var(--spacing-3) - 1px);
     }
 
     .icon {
@@ -118,16 +131,6 @@
     color: var(--color-black);
   }
 
-  &--with-node {
-    &.tag--medium {
-      padding-left: var(--spacing-1);
-    }
-
-    &.tag--large {
-      padding-left: var(--spacing-2);
-    }
-  }
-
   &--dismissible {
     &.tag--medium {
       padding-right: var(--spacing-1);
@@ -141,12 +144,6 @@
   &__node {
     display: flex;
     align-items: center;
-    margin-right: var(--spacing-1);
-
-    &--right {
-      margin-right: 0;
-      margin-left: var(--spacing-1);
-    }
   }
 
   &__remove {
@@ -163,6 +160,8 @@
   }
 
   &__content {
+    margin-right: var(--spacing-1);
+    margin-left: var(--spacing-1);
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
